fix: Client 분리
