# app/src/main/java/com/depromeet/threedays/front/controller/member/MemberController.java
@@ -1,10 +1,8 @@
 package com.depromeet.threedays.front.controller.member;
 
-import com.depromeet.threedays.front.controller.request.member.ClientRequest;
 import com.depromeet.threedays.front.controller.request.member.SignMemberRequest;
 import com.depromeet.threedays.front.controller.request.member.UpdateNameRequest;
 import com.depromeet.threedays.front.domain.model.member.Member;
-import com.depromeet.threedays.front.domain.usecase.client.AddClientUseCaseFacade;
 import com.depromeet.threedays.front.domain.usecase.member.SignMemberUseCaseFacade;
 import com.depromeet.threedays.front.domain.usecase.member.UpdateMemberUseCase;
 import com.depromeet.threedays.front.support.ApiResponse;
@@ -17,26 +15,17 @@ import org.springframework.web.bind.annotation.*;
 @RequiredArgsConstructor
 @RestController
 public class MemberController {
-
 	private final SignMemberUseCaseFacade signUseCase;
-	private final AddClientUseCaseFacade addClientUseCase;
 
 	private final UpdateMemberUseCase updateUseCase;
 
 	@PostMapping
-	public ApiResponse<Member> sign(@RequestBody @Valid SignMemberRequest request) {
+	public ApiResponse<Member> addMember(@RequestBody @Valid SignMemberRequest request) {
 		return ApiResponseGenerator.success(signUseCase.execute(request));
 	}
 
-	@PostMapping("/{memberId}/clients")
-	public ApiResponse<Void> addClient(
-			@PathVariable("memberId") Long memberId, @RequestBody @Valid ClientRequest request) {
-		addClientUseCase.execute(memberId, request);
-		return ApiResponseGenerator.success();
-	}
-
 	@PatchMapping("/{memberId}")
-	public ApiResponse<Member> updateName(
+	public ApiResponse<Member> editName(
 			@PathVariable("memberId") Long memberId, @RequestBody @Valid UpdateNameRequest request) {
 		return ApiResponseGenerator.success(updateUseCase.execute(memberId, request));
 	}
